[project]
name = "first-database"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Bilyi",email = "anthonybelyj@protonmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "faker (>=40.23.0,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
